--- a/src/main/resources/templates/thymeleaf/fo/about/customerService.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/customerService.html
@@ -27,7 +27,7 @@
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="heading1">
 									<h4 class="panel-title">
-										<a href="about.html">
+										<a href="/serviceIntro">
 											서비스 소개
 										</a>
 									</h4>
@@ -36,7 +36,7 @@
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="heading2">
 									<h4 class="panel-title">
-										<a href="announcement.html">
+										<a href="/notice">
 											공지사항
 										</a>
 									</h4>
@@ -45,7 +45,7 @@
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="heading3">
 									<h4 class="panel-title">
-										<a href="#">
+										<a href="/customerService">
 											고객센터
 										</a>
 									</h4>
