--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -2142,6 +2142,8 @@ input[type="radio"]:checked + label span {
 
 .max-w1023{max-width:1023px;}
 .max-w530{max-width: 530px;}
+.max-w400{max-width: 400px;}
+.max-w500{max-width: 100%;margin: 0;}
 
 .modal-baeg{
     width: 100%;
@@ -2253,12 +2255,12 @@ input[type="radio"]:checked + label span {
 }
 .modal-baeg .modal-content .modal-header .baegs .close{
     position: absolute;
-    right: -12.9rem;
+    right: -4rem;
     left: auto;
     text-shadow: none;
     opacity: 1;
-    top: 2.3rem;
-}
+    top: 6.3rem;
+z-index: 9;}
 
 .modal-baeg .modal-content .modal-header .close::before, .modal-baeg .modal-content .modal-header .close::after{display:none;}
 
@@ -2772,8 +2774,8 @@ input[type="radio"]:checked + label span {
 .ait-tab .tab-pane1.active{display:block;}
 .ait-tab .tab-pane2.active{display:block;padding: 0;}
 
-.max-w480{max-width: 100%;}
-.max-w800{max-width: 80rem;}
+.max-w480{max-width: 100%;margin: 0;}
+.max-w800{max-width: 80rem;margin: 0;}
 .max-w1200{max-width:120rem; width:100%;}
 .h850-o{height:850px;overflow: hidden;overflow-y: auto;}
 .pd60{padding: 60px !important;}
@@ -2834,7 +2836,7 @@ input[type="radio"]:checked + label span {
 .lb-p2{
     text-align: right;
     margin-top: 1.8rem;
-}
+display: inline-block;margin-left: 2rem;}
 .lb-p2 span{
     position: relative;
     font-size: 2.4rem;
@@ -2873,7 +2875,7 @@ input[type="radio"]:checked + label span {
 .member-body .member-logo{margin-top: 38px;margin-bottom: 53px;}
 .member-body .member-box{
     text-align: left;
-    padding: 0 150px 47px 150px;
+    padding: 0 5rem 5rem 5rem;
     position: relative;
     /* overflow: hidden; */
 }
@@ -2886,13 +2888,13 @@ input[type="radio"]:checked + label span {
     position: absolute;
     top: 3px;
     left: -30px;
-}
+display: none;}
 .me-h3{
     font-size: 38px;
     font-weight: 600;
 }
 .me-h4{
-    margin-bottom: 170px;
+    margin-bottom: 3rem;
     padding-top: 10px;
     font-size: 16px;
     color: #373737;
@@ -5266,6 +5268,61 @@ position: relative;background-color: #fbfbfb;}
 .uli-list .uli-ste .ste-div .ste-img{display: inline-block;vertical-align: middle;width: 3.9rem;height: 3.9rem;}
 .uli-list .uli-ste .ste-div .ste-p1{display: inline-block;font-size: 2.2rem;color: #999999;font-weight: 600;width: 10.8rem;padding-left: 1.2rem;vertical-align: middle;}
 .uli-list .uli-ste .ste-div .ste-p2{display: inline-block;font-size: 2.2rem;color: #222222;font-weight: 600;vertical-align: middle;}
+
+
+
+
+
+
+
+
+
+
+.login-chs{}
+.login-chs .login-tt{text-align: center;}
+.login-chs .login-tt a{font-size: 2.4rem;color: #222222;font-weight: 600;}
+.login-lk{margin-top: 7rem;margin-bottom: 1rem;}
+.login-lk p{text-align: center;font-size: 2.4rem;color: #222222;font-weight: 600;padding-bottom: 3rem;}
+.login-lk .ll-img{text-align: center;}
+.login-lk .ll-img a:last-child{margin: 0;}
+.login-lk .ll-img a:first-child{margin: 0;}
+.login-lk .ll-img a{margin: 0 9rem;position: relative;}
+.login-lk .ll-img a:after{content:'';position: absolute;right: -4.8rem;width: 1px;height: 11.6rem;border: #d8dde6 0.1rem dashed;}
+.login-lk .ll-img a:last-child:after{content:'';display: none;}
+.login-lk .ll-img a img{width: 10.6rem;height: 10.6rem;}
+
+
+
+
+
+
+
+
+
+.input-draw{}
+.input-draw{}
+.inp-p-draw{
+	display:none;
+    font-size: 12px;
+    color: #999999;
+    padding-top: 5px;
+    padding-bottom: 3px;
+    font-weight: 600;
+}
+.input-draw input{border: #e9625c 0.2rem solid;}
+.input-draw .inp-p-draw{display:block;font-size: 2.2rem;padding-top: 1rem;padding-bottom: 3rem;}
+.input-draw .inp-p{display:none;}
+
+.input-drox{position: relative;}
+.input-draw .input-drox:after{content:'';position: absolute;right: 0;top: 0;background-image: url(../img/input-check.jpg);width: 6.4rem;height: 6.4rem;background-size: 4.1rem;background-repeat: no-repeat;background-color: #ea615b;background-position: center;}
+
+
+
+
+.mem-p{padding-bottom: 0 !important;font-size: 1.8rem !important;font-weight: 600;color: #999999 !important;}
+.in-ked:after{content:''; background-image: url(../img/icon-3.jpg);width: 26px;height: 17px;background-size: 26px 17px;position: absolute;right: 14px;top: 50%;transform: translateY(-50%);}
+
+.w100{width:100%;}
 
 
 
