--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -164,7 +164,7 @@
 <!-- Modal -->
 <!-- login -->
 <div class="modal fade modal-s" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-baeg max-w480 login-modal">
+	<div class="modal-dialog modal-baeg max-w480">
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
 				<div class="baegs">
@@ -182,15 +182,28 @@
 						<input type="password" class="input-3" placeholder="비밀번호" onkeydown="javascript: if (event.keyCode == 13) {login();}"id="txt_Pw"/>
 					</div>
 					<div class="radio-3 rad-mg">
-						<input type="radio" id="r1" name="rr">
-						<label for="r1" class="wd-105"><span></span>자동로그인</label>
-						<input type="radio" id="r2" name="rr">
-						<label for="r2"><span></span>아이디(이메일) / 비밀번호 찾기</label>
+						<input type="checkbox" id="a1" name="cc" />
+						<label for="a1"><span></span>자동로그인</label>
 					</div>
 					<div class="bat-box3">
 						<button type="button" class="ba-btn1" onclick="login()"><span>Login</span></button>
 					</div>
-					<p class="lb-p2"><a href="#"><span>회원가입</span></a></p>
+					<div class="login-chs">
+						<div class="login-tt">
+							<a href="#">아이디(이메일) / 비밀번호 찾기</a>
+							<p class="lb-p2"><a href="#"><span>회원가입</span></a></p>
+						</div>
+						
+					</div>
+					<div class="login-lk">
+						<p>소셜아이디로 간편하게 로그인할 수 있습니다.</p>
+						<div class="ll-img">
+							<a href="#"><img src="resources/img/icon-naver.png" /></a>
+							<a href="#"><img src="resources/img/icon-kaka.png" /></a>
+							<a href="#"><img src="resources/img/icon-google.png" /></a>
+						</div>
+					</div>
+					
 				</div>
 			</div>
 		</div>
@@ -262,6 +275,14 @@
 					</div>
 					<div class="bat-box3">
 						<button type="button" class="ba-btn1" id="memberInputBtn"><span>회원 가입하기</span></button>
+					</div>
+					<div class="login-lk">
+						<p>소셜아이디로 간편하게 로그인할 수 있습니다.</p>
+						<div class="ll-img">
+							<a href="#"><img src="resources/img/icon-naver.png" /></a>
+							<a href="#"><img src="resources/img/icon-kaka.png" /></a>
+							<a href="#"><img src="resources/img/icon-google.png" /></a>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -401,6 +422,7 @@ function logout(){
 				sMbrSqVal = null;
 				loginBf.setAttribute("style", "");
 				loginAf.setAttribute("style", "display:none;");3
+				sessionStorage.clear();
 				modalAlertShow("로그아웃 되었습니다.", "reload");
 	    	}
 		},
@@ -423,78 +445,6 @@ $('#memberModal').on('show.bs.modal', function (e) {
 	fn_validation('mbrNmCheck','', 'B');
 	
 });
-
-//Modal Confirm Form
-function modalConfirm(title, msg, callback){
-	var Html = '';
-	Html += '<div class="modal-dialog modal-baeg max-w530">';
-	Html += '	<div class="modal-content">';
-	Html += '		<div class="modal-header">';
-	Html += '			<div class="baegs">';
-	Html += '				<h2>'+ title +'</h2>';
-	Html += '		    	<img src="resources/img/ba/icon-1.png" class="con-img" />';
-	Html += '		    	<div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>';
-	Html += '			</div>';
-	Html += '		</div>';
-	Html += '		<div class="modal-body">';
-	Html += '			<div class="md-box-1">';
-	Html += '				<h4 class="min-h240">';
-	Html += msg;
-	Html += '				<h4>';
-	Html += '				<div class="baeg-btn mg_t30">';
-	Html += '					<a href="#"><button type="button" class="baeg-b1" id="ModalConfirm_Ok">확인</button></a>';
-	Html += '					<a href="#" data-dismiss="modal" aria-label="Close" id="ModalConfirm_Cancel"><button type="button" class="baeg-b2">취소</button></a>';
-	Html += '				</div>';
-	Html += '			</div>';
-	Html += '		</div>';
-	Html += '	</div>';
-	Html += '</div>';
-	$("#ModalConfirm").empty();
-	$("#ModalConfirm").append(Html).trigger("create");
-	$("#ModalConfirm").modal("show");
-	
-
-	$("#ModalConfirm_Ok").on("click", function(){
-		$("#ModalConfirm").modal("hide");
-		callback(true);
-	});
-
-	$("#ModalConfirm_Cancel").on("click", function(){
-		$("#ModalConfirm").modal("hide");
-		callback(false);
-	});
-
-}
-
-
-
-
-//Modal Alert Form
-function modalForm(msg,obj) {
-	var Html = "";
-	Html +=	'<div class="modal-dialog modal-baeg max-w530">';
-	Html +=	'<div class="modal-content">';
-	Html +=	'<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">';
-	Html +=	'<div class="baegs">';
-	//Html +=	'<div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>';
-	Html +=	'</div>';
-	Html +=	'</div>';
-	Html +=	'<div class="modal-body">';
-	Html +=	'<div class="md-box-1">';
-	Html +=	'<div class="md-ds" style="color:#333;">';
-	Html +=	msg;
-	Html +=	'</div>';
-	Html +=	'<div class="baeg-btn mg_t30">';  //onclick="testing(\'' + text  + '\')"
-	Html +=	'<button type="button" class="baeg-b1" onclick="modalAlertClose(\''+obj+'\');">확인</button>';
-	Html +=	'</div>';
-	Html +=	'</div>';
-	Html +=	'</div>';
-	Html +=	'</div>';
-	Html +=	'</div>';
-	$("#ModalAlert").empty();
-	$("#ModalAlert").append(Html).trigger("create");
-}
-
 
 //회원가입
 $("#memberInputBtn").on('click', function(event){
@@ -664,42 +614,6 @@ function CheckEmail(str) {
         return true;         
     }                            
 }                         
-
-
-
-function modalAlertShow(msg,obj) {
-	 //Modal Form Call
-	 modalForm(msg,obj)
-	 
-	$("#ModalAlert").modal("show");
-}
-
-function modalAlertClose(obj) {
-	
-	$('#ModalAlert').modal('hide');
-	
-	if(obj == "reload"){
-		location.reload();
-	}
-	
-	if(obj == "memberInput") {
-		//회원가입 모달
-		$('#memberModal').modal('hide');
-		//로그인 모달
-		$('#loginModal').modal('show');
-		//회원가입 Form reset
-		$("#memberInput")[0].reset(); 
-		
-		return;
-	}
-	
-	if(obj) {
-		$('#'+obj).focus();
-		return;
-	}
-	
-	
-}
 
 //아이디 중복 체크
 $("#mbrId").blur(function() {
