--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_scrap.html
@@ -30,12 +30,12 @@
 									</a>
 								</li>
 								<li>
-									<a href="#" class="">
+									<a href="#" class="up-on">
 										작가명 <span>ㄱ</span> - <span>ㅎ</span>
 									</a>
 								</li>
 								<li>
-									<a href="#" class="">
+									<a href="#" class="down-on">
 										작가명 <span>A</span> - <span>Z</span>
 									</a>
 								</li>
