--- a/src/main/resources/templates/thymeleaf/header.html
+++ b/src/main/resources/templates/thymeleaf/header.html
@@ -46,7 +46,7 @@
 				<div class="navbox">
 					<nav>
 						<li><a href="/deal">Deal</a></li>
-						<li><a href="#">Megazine</a></li>
+						<li><a href="/insights">Megazine</a></li>
 						<li><a href="/artist">Artist Library</a></li>
 						<li><a href="/serviceIntro">About</a></li>
 					</nav>
@@ -68,7 +68,7 @@
 							<li><a href="/myDeal"><img src="resources/img/ic-2.jpg" /><span>경매 / 거래 내역</span></a></li>
 							<li><a href="/myCollection"><img src="resources/img/ic-3.jpg" /><span>마이 콜렉션</span></a></li>
 							<li><a href="/scrap"><img src="resources/img/ic-4.jpg" /><span>좋아요</span></a></li>
-							<li><a href="#"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
+							<li><a href="/customerService"><img src="resources/img/ic-5.jpg" /><span>고객센터</span></a></li>
 						</ul>
 						<button type="button" class="btn-1" onclick="logout()">로그아웃</button>
 					</div>
